docs/apache-airflow/1.10.8/_sources/_api/airflow/contrib/hooks/aws_lambda_hook/index.rst.txt
:mod:`airflow.contrib.hooks.aws_lambda_hook`
============================================

.. py:module:: airflow.contrib.hooks.aws_lambda_hook

.. autoapi-nested-parse::

   This module contains AWS Lambda hook



Module Contents
---------------

.. py:class:: AwsLambdaHook(function_name, region_name=None, log_type='None', qualifier='$LATEST', invocation_type='RequestResponse', config=None, *args, **kwargs)

   Bases: :class:`airflow.contrib.hooks.aws_hook.AwsHook`

   Interact with AWS Lambda

   :param function_name: AWS Lambda Function Name
   :type function_name: str
   :param region_name: AWS Region Name (example: us-west-2)
   :type region_name: str
   :param log_type: Tail Invocation Request
   :type log_type: str
   :param qualifier: AWS Lambda Function Version or Alias Name
   :type qualifier: str
   :param invocation_type: AWS Lambda Invocation Type (RequestResponse, Event etc)
   :type invocation_type: str
   :param config: Configuration for botocore client.
       (https://boto3.amazonaws.com/v1/documentation/api/latest/reference/core/session.html)
   :type config: botocore.client.Config

   
   .. method:: get_conn(self)



   
   .. method:: invoke_lambda(self, payload)

      Invoke Lambda Function




